--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
             <!-- METATAGS -->
             <meta charset="utf-8" />
             <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-            <title>Text on hover test</title>
+            <title>3S1B</title>
             <meta name="viewport" content="width=device-width, initial-scale=1" />
 
             <!-- A-FRAME SCRIPTS -->
