--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             });
 
 
-          </script>--->
+          </script>-->
 
  <script type="text/javascript">
 
@@ -160,6 +160,9 @@
 
 
               <a-entity rotation="0 -10 0">
+		      <a-entity light="castShadow: true; shadowCameraFar: 50; shadowCameraFov: 90.1; shadowCameraNear: -2.68; shadowCameraTop: 13.81; shadowCameraRight: 15.64; shadowCameraBottom: -12.16; shadowCameraLeft: -14.75; shadowCameraVisible: false" position="1 5 1"></a-entity>
+		      <a-gltf-model src="tree.gltf" shadow="receive: false"></a-gltf-model>
+		      <a-entity light="type: ambient; color: #CCC"></a-entity>
 
                 <a-sphere
                   steigen-fallen
@@ -174,6 +177,7 @@
                   animation__color="startEvents: mouseenter;"
                   animation__scale2="startEvents: mouseleave;"
                   animation__colorb="startEvents: mouseleave;"
+		  shadow=""
                 ></a-sphere>
 
                 <a-sphere
@@ -189,6 +193,7 @@
                   animation__color2="startEvents: mouseenter;"
                   animation__scale2.2="startEvents: mouseleave;"
                   animation__colorb="startEvents: mouseleave;"
+		  shadow=""
                 ></a-sphere>
 
                 <a-sphere
@@ -204,6 +209,7 @@
                   animation__color3="startEvents: mouseenter;"
                   animation__scale2.3="startEvents: mouseleave;"
                   animation__colorb="startEvents: mouseleave;"
+		  shadow=""
                 ></a-sphere>
 
                 <a-sphere
@@ -219,6 +225,7 @@
                   animation__color4="startEvents: mouseenter;"
                   animation__scale2.4="startEvents: mouseleave;"
                   animation__colorb="startEvents: mouseleave;"
+		  shadow=""
                 ></a-sphere>
 
               </a-entity>
@@ -231,7 +238,7 @@
 
               <!-- SKY -->
               <a-sky src="background.jpeg" radius="15" ></a-sky>
-              <a-plane hoehe color="#efefef" height="30" width="30" rotation="-90 0 0"></a-plane>
+              <a-plane hoehe color="#efefef" height="30" width="30" rotation="-90 0 0" shadow="receive: true"></a-plane>
             </a-scene>
 
 
